# libtouchmousegestures

./: CMakeLists.txt  README
include/: libtouchmousegestures.h
src/: libtouchmousegestures.c
